# convchain-rs

./: .gitignore  Cargo.toml  LICENSE.md  README.md
benches/: bench_4x4.rs  bench_8x8.rs
examples/: conv_chain.rs  conv_chain_fast.rs
resources/: samples.xml
src/: conv_chain.rs  fast.rs  lib.rs  sample.rs  slow.rs
