[package]
name = "convchain"
description = "Bitmap generation from a single example with convolutions and MCMC"
version = "0.2.0"
edition = "2018"
keywords = ["mcmc", "generative-imaging", "image-processing"]
categories = ["computer-vision", "graphics", "game-development"]
authors = ["Markus Mayer <widemeadows@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sunsided/convchain-rs"

[[example]]
name = "slow"
path = "examples/conv_chain.rs"

[[example]]
name = "fast"
path = "examples/conv_chain_fast.rs"

[[bench]]
name = "bench_4x4"
harness = false

[[bench]]
name = "bench_8x8"
harness = false

[dependencies]
rand = "0.8.4"

[dev-dependencies]
image = "0.23.14"
quick-xml = { version = "0.22.0", features = ["serialize"] }
serde = { version = "1.0.126", features = ["derive"]}
rayon = "1.5.1"
criterion = "0.3.4"

